boulder/tests/error/scope/scopeless_break.bo
# `break` outside of a scope
# (5:

fn scopeless_break() -> u32 {
    break 7;
    7
}